--- a/requirements.txt
+++ b/requirements.txt
@@ -47,6 +47,7 @@ requests==2.28.1
 requests-oauthlib==1.3.1
 rsa==4.9
 scikit-learn==1.1.2
+scikit-learn-extra==0.2.0
 scipy==1.9.0
 six==1.16.0
 sklearn==0.0
@@ -75,3 +76,4 @@ newspaper3k==0.2.8
 docx2txt==0.8
 azure-cognitiveservices-speech==1.25.0
 python-dotenv==0.21.1
+google-api-python-client==2.80.0
